front-store-app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-store-app
  namespace: wms-proto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-store-app
  template:
    metadata:
      labels:
        app: front-store-app
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: front-store-app
          image: 10.96.191.117:8082/front-store-app:jenkins-17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/front-store/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/front-store/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
