front-store-app/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-store-postgres
  namespace: wms-proto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-store-postgres
  template:
    metadata:
      labels:
        app: front-store-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12.6
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d frontstoreapp
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d frontstoreapp
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
