front-store-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-store-app
  namespace: wms-proto
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/front-store
            pathType: Prefix
            backend:
              service:
                name: front-store-app
                port:
                  number: 8080
